# app/Http/Controllers/RegisterController.php
@@ -9,14 +9,17 @@ use Illuminate\Support\Facades\Hash;
 
 
 /**
- * @group Race
- * Operations related to races.
+ * @group Register
+ * Operations related to register.
  */
 class RegisterController extends Controller
 {
+    /**
+     * 註冊,寄註冊信
+     */
     public function register(Request $request)
     {
-       
+
         // 1. 驗證輸入
         // 每個email在users表單都是唯一的
         // 密碼需要做確認
@@ -31,12 +34,11 @@ class RegisterController extends Controller
             'name' => $validatedData['name'],
             'email' => $validatedData['email'],
             'password' => Hash::make($validatedData['password']),
-            'role'=>'user'
+            'role' => 'user'
         ]);
 
         event(new Registered($user));
 
         return response(['message' => 'User registered successfully!', 'user' => $user], 201);
-    }  
     }
-
+}
